--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "express": "^5.2.1",
     "express-rate-limit": "^8.2.1",
     "express-validator": "^7.3.1",
+    "fs": "^0.0.1-security",
     "helmet": "^8.1.0",
     "morgan": "^1.10.1",
+    "multer": "^2.0.2",
     "mysql": "^2.18.1",
+    "path": "^0.12.7",
     "socket.io": "^4.8.3"
   },
   "devDependencies": {
